--- a/src/app/(listing)/listingScreen/listingScreen.css
+++ b/src/app/(listing)/listingScreen/listingScreen.css
@@ -84,8 +84,7 @@ div.content h3.formTitle{
     width: 450px;
     font-size: 2rem;
     margin:10px auto 5px auto;
-
-
+    margin-left: 30px;
 
 }
 div.content .txtInput{
@@ -180,4 +179,63 @@ div.ListingBtn button.listingcompletebtn{
     text-indent: 1rem;
     letter-spacing: 1rem;
     padding: 10px 15px;
+}
+
+@media screen and (max-width: 768px) {
+
+    div.content{
+        /*display: flex;*/
+        /*flex-direction: column;*/
+        /*align-content: center;*/
+        width: 85%;
+        /*height: 100%;*/
+        margin: 10px auto 10px auto;
+        border: 5px #605252;
+        border-style: none solid none solid;
+        /*box-shadow: 0 -5px 0 #605252;*/
+
+    }
+
+
+    div.content .txtInput{
+        display: block;
+        margin: 0 auto 50px auto;
+        height: 2.5rem;
+        padding: 5px 10px;
+        width: 280px;
+        border-radius: 20px;
+        background-color: #fff;
+    }
+
+    div.content .areaInput{
+        resize:vertical;
+        padding: 15px;
+        font-size: 1rem;
+        display: block;
+        margin: 10px auto 50px auto;
+        width: 280px;
+        height: 150px;
+        border: black solid 2px;
+        border-radius: 5px;
+        transition: 0.2s;
+    }
+    div.ListingBtn{
+        width: 400px;
+        justify-content: normal;
+        margin-left: 20px;
+    }
+    .listingCancelbtn{
+        margin-right: 20px;
+    }
+    div.ListingBtn button{
+        margin-left: 10px;
+        border-radius: 50px;
+        border: 1px solid #000;
+        box-shadow: 2px 2px 0 #605252;
+        transition: box-shadow 0.2s;
+    }
+
+
+
+
 }
