--- a/src/app/_components/listingScreenRadiobutton/listingScreenRadiobutton.css
+++ b/src/app/_components/listingScreenRadiobutton/listingScreenRadiobutton.css
@@ -58,7 +58,6 @@ body {
 
 .radio_button_low2{
     width: 180px;
-
     display: flex;
     flex-direction: column;
 }
@@ -116,5 +115,59 @@ body {
 #outlined-basic:hover{
     background-color: #fffa;
     box-shadow: 2px 2px 0 #8e7560;
+}
+
+@media screen and (max-width: 768px) {
+
+    .radio{
+        width: 290px;
+        height: 300px;
+        padding: 30px;
+        border-radius: 20px;
+        margin:  5px auto 25px auto;
+        display: flex;
+        justify-content: center;
+        background-color: #fff;
+        border: 2px solid #605252;
+        box-shadow: 2px 2px 0 #605252;
+        transition:0.3s;
+
+    }
+    .radio_button{
+        width: 280px;
+    }
+    .radio_button_low1{
+        width: 120px;
+        display: flex;
+        flex-direction: column;
+        margin-left: 40px;
+    }
+
+    .radio_button_low2{
+        width: 120px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .Size_Situation{
+        width: 400px;
+        display:block;
+        margin:  0 auto;
+        margin-left: 20px;
+    }
+
+    .Situation{
+        width: 260px;
+        margin-top: 120px;
+    }
+
+    .SendDays{
+        width: 290px ;
+        margin-left: 20px;
+        margin-top: 80px;
+        margin-bottom: 80px;
+
+    }
+
 }
 
