--- a/src/app/(listing)/listingcomplete/[id]/listingcomplete.css
+++ b/src/app/(listing)/listingcomplete/[id]/listingcomplete.css
@@ -111,3 +111,70 @@ button#edit{
     background-color: #605252;
 }
 
+
+@media screen and (max-width: 1060px) {
+    div#info {
+        flex-direction: column;
+        margin: 0 auto 0 auto;
+        margin-left: 6%;
+    }
+
+    #responsiveProductMainImage {
+        margin-top: 100px;
+        margin-left: -10px;
+    }
+
+    div#text {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+    }
+
+    #text h1 {
+        font-size: 0.5rem;
+        width: 130%;
+    }
+
+    #seller {
+        width: 400px;
+        font-size: 1rem;
+        margin-left: -20px;
+        align-items: center;
+    }
+
+    #seller p{
+        margin-top: 30px;
+        margin-left: -9px;
+        align-items: center;
+    }
+
+    .StripeButtonDisplay {
+        display: block;
+    }
+
+    p#category {
+        margin-bottom: 100px;
+    }
+
+    div#control{
+        width: 380px;
+        display: flex;
+        justify-content: center;
+        margin:0 auto;
+        margin-top: 100px;
+    }
+
+
+    button.listingCompleteButton{
+        background-color: #000;
+        font-size: 1.2rem;
+        color: #fff;
+        border-radius: 50px;
+        padding: 10px 20px;
+        margin-bottom: 30px;
+
+    }
+
+}
+
+
