--- a/src/app/payComplete/payComplete.css
+++ b/src/app/payComplete/payComplete.css
@@ -10,11 +10,11 @@ main{
     flex-direction: column;
     align-items: center;
 }
-h2.Pcon{
+h2.PconH2{
     font-size: 2.5rem;
     margin: 0 0 50px 0;
 }
-p.Pcon{
+p.PconP{
     font-size: 1.2rem;
     margin: 0 0 25px 0;
     line-height: 2;
@@ -35,4 +35,18 @@ a#return{
     border-radius: 50px;
     padding: 10px 100px 10px 100px;
 
+}
+
+@media screen and (max-width: 768px) {
+
+    h2.PconH2{
+        width: 380px;
+        text-align: center;
+        font-size: 1.7rem;
+        margin: 0 0 50px 0;
+    }
+    p.PconP{
+        width: 370px;
+        margin: 0 0 50px 0;
+    }
 }
