--- a/src/app/_components/stripe/stripe.css
+++ b/src/app/_components/stripe/stripe.css
@@ -22,9 +22,55 @@ button.StripePurchaseButton{
 button.StripePurchaseButton:hover{
     box-shadow: 0 0 0 #605252;
     opacity: 0.8;
+    background-color: #8e7560;
 }
 
 .selectProduct{
     margin-top: 5%;
     width: 100%;
+}
+.MuiBox-root{
+    border-radius: 25px;
+}
+
+/* モーダル内 */
+
+#modal-modal-title{
+    margin: 10px 40px 10px 10px;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+#modal-modal-description{
+    display: flex;
+    align-items: center;
+    margin: 0 0 0 3rem;
+}
+
+
+div.Iconset{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+div.Iconset img{
+    padding: 10px;
+}
+#ppIcon{
+    transform: scale(90%);
+    /*margin-bottom:20px;*/
+}
+div.Iconset img{
+    transition: 0.2s;
+
+}
+
+div.Iconset:hover{
+    opacity: 0.6;
+    text-decoration: underline #605252;
+    /*background-color: #D0C7B2;*/
+    /*box-shadow: 0 0 5px #D0C7B2;*/
+}
+
+#card{
+    margin: 0 25px 0 0;
 }
