ベルとモーダルの修正。ベルのサイズが通知によって違う？内容によって変わるのかpタグの名が朝で変わっているのかわかんない とりあえず上固定で作ってます

--- a/src/app/_components/header/Heder.css
+++ b/src/app/_components/header/Heder.css
@@ -316,6 +316,11 @@ span.under_bar {
 
 @media screen and (max-width: 768px) {
 
+    header{
+        position: fixed;
+        z-index: 999;
+    }
+
 
     li#UserName{
         overflow:hidden;
@@ -467,6 +472,28 @@ span.under_bar {
         width: 10%;
     }
 
+    .bell{
+        margin: 0;
+    }
+
+    .modal-content{
+        width: 400px;
+    }
+    .modal-title-tab-text{
+        width: 200px;
+    }
+    .alertDisplay{
+        width: 100%;
+        color: #4b5563;
+    }
+    .alert svg{
+        width: 50px;
+        height: 50px;
+        margin: 0;
+    }
+    .alertDisplay p{
+
+    }
 
     div.bar ul span#short_line{
         display: none;
