ログインのタグが下に行きます。直すとベルが下に…とりあえずログイン中はきれいな画面が

--- a/src/app/_components/header/Heder.css
+++ b/src/app/_components/header/Heder.css
@@ -507,7 +507,10 @@ span.under_bar {
 
     }
 
+
+
     .css-1e6y48t-MuiButtonBase-root-MuiButton-root{
+        margin: 0;
         padding: 0;
     }
 
