チェック用アラート削除等微細な変更

--- a/src/app/_components/stripe/stripe.css
+++ b/src/app/_components/stripe/stripe.css
@@ -21,7 +21,7 @@ button.StripePurchaseButton{
 }
 button.StripePurchaseButton:hover{
     box-shadow: 0 0 0 #605252;
-    opacity: 0.8;
+    background-color: #8e756088;
 }
 
 .selectProduct{
