ページネート部分をwidth100%にして商品部分を固定サイズにしていきます

--- a/src/app/searchResult/searchResult.css
+++ b/src/app/searchResult/searchResult.css
@@ -179,9 +179,11 @@ select#ChangePPP{
 /* ページネーションのCSS */
 .PaginateFlame{
     /*background-color: #660000;*/
+    width: 100%;
     display: flex;
     flex-direction: row;
-    margin: 10px 10px 50px 10px;
+    justify-content: center;
+    margin: 10px auto 50px auto;
     list-style: none;
 }
 
