--- a/src/app/_components/CollapsibleProductCard/CollapsibleProductCard.css
+++ b/src/app/_components/CollapsibleProductCard/CollapsibleProductCard.css
@@ -5,14 +5,19 @@
 
 /* 通常時の画像スタイル */
 .collapsed-image {
-    width: 100%;
-    height: 50vh;
+    width: 230px;
+    height: 300px;
     border-radius: 10px 10px 0 0;
     background-color: #ccc;
-    margin: 0;
-    padding-bottom: 20px;
+    margin: 0 auto;
+    /*padding-bottom: 20px;*/
     /* 通常時特有のスタイルをここに追加 */
 }
+.collapsed-image img{
+    width: 100%;
+    object-fit: cover;
+}
+
 
 .testttt{
     width: 100%;
@@ -41,7 +46,7 @@
 /* 展開時の画像スタイル */
 .expanded-image {
     width: 80%;
-    height: 100vh;
+    height: 70%;
     margin: 20px 0 20px 20px;
     border-radius: 10px;
     background-color: #ccc;
@@ -253,7 +258,8 @@ li.picts a img.pictS{
 /* 展開時のカードのスタイル */
 .product-card-list .collapsible-product-card {
     flex: 0 0 auto;
-    width: calc(20% - 20px);
+    width: 280px;
+    /*width: calc(20% - 20px);*/
     transition: all 0.3s ease-in-out;
 }
 
