--- a/src/app/_components/emojiPicker/emojiPicker.css
+++ b/src/app/_components/emojiPicker/emojiPicker.css
@@ -9,9 +9,12 @@ body{
 }
 
 .emojiButton {
+    position: absolute;
+    bottom: -10px;
+    right: -10px;
     width: 20px;
     height: 20px;
-    margin: 0 auto;
+    margin: 0 ;
     padding: 0;
     display: flex;
     align-items: center;
