出品画面修正

--- a/src/app/(listing)/listingScreen/listingScreen.css
+++ b/src/app/(listing)/listingScreen/listingScreen.css
@@ -55,8 +55,9 @@ div#Photos{
 div.kamera{
     position: relative;
     margin: 20px auto 80px auto;
-    width: 200px;
-    height: 200px;
+    width: 20%;
+    height: 34vh;
+    border-radius: 70px;
     flex-shrink: 0;
     background: #D9D9D9;
 }
@@ -78,6 +79,7 @@ div.kamera{
 
 
 img.photo_preview{
+    border-radius: 10px;
     object-fit: contain;
     background-color: #EBE8DB;
 }
