--- a/src/app/_components/userNavigationModal/userNavigation.css
+++ b/src/app/_components/userNavigationModal/userNavigation.css
@@ -82,6 +82,13 @@ div#Close_Logout {
     filter: drop-shadow(0 0 5px #fff);
 }
 
+.UserNavigationIcon {
+    width: 50px;
+    height: auto;
+    margin-top: -6px;
+    margin-left: -30px;
+    color: #4c4d48;
+}
 @media screen and (max-width: 768px) {
 
     .UserNavigationIcon {
